syntax = "proto3";

option java_package = "com.example.faircon";
option java_multiple_files = true;

message HomePreferences {
    int32 fan_speed = 1;
    float room_temperature = 2;
    float tec_voltage = 3;
    int32 power_consumption = 4;
    int32 heat_expelling = 5;
    float tec_temperature = 6;
    enum Mode {
        IDLE = 0;
        FAN = 1;
        COOLING = 2;
        HEATING = 3;
    }
    enum Status {
        STABLE = 0;
        TRANSITION_DEC = 1;
        TRANSITION_INC = 2;
        TEC_HEATING = 3;
        TEC_OVERHEATING = 4;
    }
    Mode mode = 7;
    Status status = 8;
}

